--- a/employee-directory/package.json
+++ b/employee-directory/package.json
@@ -9,7 +9,8 @@
     "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "scripts": {
     "start": "react-scripts start",
